--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <div class="project-card">
           <div class="project-text">
             <h2>Infinite loop carousel</h2>
-            <h3>Javascript</h3>
+            <h3>Javascript, HTML, CSS</h3>
             <p>
               A simple but clean infinitely looping content carousel, slides left and right through content. 
               Loops seamlessly. Scales to any screen size.
@@ -165,8 +165,23 @@
 
         <div class="project-card">
           <div class="project-text">
+            <h2>3D Loopping Gallery</h2>
+            <h3>Javascript, HTML, CSS</h3>
+            <p>
+              3D image gallery with seamless looping. Images are rotated around a point, emulating a circle.
+              Images at the back of the circle are hidden as they move out of view, and shown again
+              just before they appear back into view.
+            </p>
+            <a href="https://github.com/adamdgit/3D-gallery">Github code.</a>
+            <a class="button" href="../3d-gallery/index.html">View Project</a>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentcolor" viewBox="0 0 576 512"><!--! Font Awesome Pro 6.2.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M512 32H160c-35.35 0-64 28.65-64 64v224c0 35.35 28.65 64 64 64H512c35.35 0 64-28.65 64-64V96C576 60.65 547.3 32 512 32zM528 320c0 8.822-7.178 16-16 16h-16l-109.3-160.9C383.7 170.7 378.7 168 373.3 168c-5.352 0-10.35 2.672-13.31 7.125l-62.74 94.11L274.9 238.6C271.9 234.4 267.1 232 262 232c-5.109 0-9.914 2.441-12.93 6.574L176 336H160c-8.822 0-16-7.178-16-16V96c0-8.822 7.178-16 16-16H512c8.822 0 16 7.178 16 16V320zM224 112c-17.67 0-32 14.33-32 32s14.33 32 32 32c17.68 0 32-14.33 32-32S241.7 112 224 112zM456 480H120C53.83 480 0 426.2 0 360v-240C0 106.8 10.75 96 24 96S48 106.8 48 120v240c0 39.7 32.3 72 72 72h336c13.25 0 24 10.75 24 24S469.3 480 456 480z"/></svg>
+        </div>
+
+        <div class="project-card">
+          <div class="project-text">
             <h2>3D Card Animation</h2>
-            <h3>CSS3</h3>
+            <h3>HTML, CSS</h3>
             <p>
               Pure CSS 3D hover effect. Demonstrated with a Pokemon card design in which the 
               Pokemon pops-out of the card on hover. 
